logs/collective.editskinswitcher.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/browser'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/browser/templates'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/locales'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/locales/en'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/locales/nl'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/profiles'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/profiles/default'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/tests'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/tests/skins'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/tests/skins/editskinswitcher_edit_content'...
Listing './lib/python3.5/site-packages/collective/editskinswitcher/tests/skins/editskinswitcher_tests'...
Compiling './lib/python3.5/site-packages/collective/editskinswitcher/tests/utils.py'...
***   File "./lib/python3.5/site-packages/collective/editskinswitcher/tests/utils.py", line 111
    print portal.error_log.getLogEntries()[-1]['tb_text']
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective.editskinswitcher-3.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
